[tool.poetry]
name = "house-prices"
version = "0.1.0"
description = "kaggle practice with ML"
authors = ["drtjh1988"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
kagglehub = "^0.3.4"
kaggle = "^1.6.17"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.1"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
